# Lock-Free-List

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: AddGitSubmodule.cmake
src/: CMakeLists.txt  LFList.cpp  LFList.h  StatefulAutomaton.cpp  StatefulAutomaton.h  debug.h  macros.h
src/automata/: insert.hoa  remove.hoa
src/boolean_parser/: AST.h  ASTAdapted.h  BooleanCalculator.cpp  BooleanCalculator.h  CMakeLists.txt  Evaluator.cpp  Evaluator.h  Parser.cpp  Parser.h  ParserDef.h  Utils.h
src/utils/: CMakeLists.txt  debug.cpp  debug.h  macros.h
tests/: CMakeLists.txt  LFListTest.cpp  LoggingUtils.h
verification/: lf_list.cfg  lf_list.tla
